# vertcounter

./: README.md  pyproject.toml
vertcounter/: vertcounter.py
