[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vertcounter"]

[project]
name = "vertcounter"
version = "0.0.1"
dependencies = [
    "click >= 8.1.3",
    "gpxpy >= 1.5.0", 
    "tabulate >= 0.9.0",
]

[project.scripts]
vertcounter = "vertcounter.vertcounter:vertcounter"